<resources>
    <string name="app_name">Bansharna</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="name_hint">Name</string>
    <string name="hint_mobile_number">Phone number</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="login">Login</string>
    <string name="fab_content_desc" translatable="false">add report btn</string>
    <string name="no_orders_placeholder">No Orders Yet</string>


    <string-array name="problem_types">
        <item>tires</item>
        <item>battery</item>
        <item>engine</item>
        <item>fuel</item>
    </string-array>

    <string name="status_new">NEW</string>
    <string name="status_rejected">REJECTED</string>
    <string name="status_processing">PROCESSING</string>
    <string name="status_completed">COMPLETED</string>


    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure that you want to delete this request?</string>
    <string name="confirmation_dialog">Confirmation dialog</string>
    <string name="choose_new_status">Set a new status</string>
    <string name="ask_for_help">Ask for help</string>
    <string name="please_select_type">"select the type of your problem please "</string>
    <string name="can_you_specify">can you specify more details?</string>
    <string name="extra_details">Extra details</string>
    <string name="refresh_location">Refresh location</string>
    <string name="send">send</string>
    <string name="cancel">cancel</string>
    <string name="must_chose_new_status">you must choose a new status</string>
    <string name="chose_at_least_one_status">chose a status first</string>
    <string name="gps_settings_message">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="gps_settings_title">GPS Settings</string>
    <string name="settings">Settings</string>
    <string name="type_selection_message">you need the select the problem type before submitting !</string>
    <string name="location_selection_message">location is not set, please click on refresh location first</string>
    <string name="whatsapp_not_existed">Whatsapp app not installed in your phone</string>
    <string name="car_location">car\'s location</string>
    <string name="phone_missing_message">please enter your phone number!</string>
    <string name="password_missing_message">please enter your password!</string>
    <string name="name_missing_message">please enter your full name !</string>

    <string name="price_unit">SAR</string>
    <string name="delete_user_request">delete this request</string>

    <string name="about_us">تطبيق بنشرنا
\n\nفكرة متدربي مادة المشروع في الكلية التقنية بحظر الباطن
\n
\nأسماء الطلاب
\nعبدالله مسلط المطيري
\nاحمد غايب الشمري
\nوليد عبدالرحمن العنزي
\nمناور هذيل الحربي
\nريان احمد غازي
\n
\nبإشراف المدرب
\nفيصل المطيري</string>
    <string name="about_us_title">About us</string>

</resources>