<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddOrderActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/ask_for_help"
        android:textColor="#fff"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:padding="16dp"
        android:background="@color/app_bg_dark"/>

    <TextView
        android:id="@+id/spinner_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/please_select_type"
        android:layout_below="@id/title"
        android:layout_marginTop="16sp"
        android:layout_marginStart="16sp"/>

    <Spinner
        android:id="@+id/type_chooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:entries="@array/problem_types"
        android:layout_below="@id/spinner_title"
        android:layout_marginTop="16sp"
        android:layout_marginStart="16sp"/>

    <TextView
        android:id="@+id/details_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/can_you_specify"
        android:layout_below="@id/type_chooser"
        android:layout_marginTop="16sp"
        android:layout_marginStart="16sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/details_title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/extra_details"
            android:lines="4" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_location_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edit_text_layout"
        android:drawableTop="@drawable/ic_location"
        android:background="@drawable/login_button_bg"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/refresh_location"/>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/send"
        android:textAllCaps="false"
        android:background="@drawable/login_button_bg"
        android:textColor="#fff"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/save"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:background="@drawable/login_button_bg"
        android:textColor="#fff"/>

</RelativeLayout>